Continued work on the multilingual interface, added an error message in case the user has been blocked by the administrator

--- a/config/config.json
+++ b/config/config.json
@@ -13,7 +13,8 @@
             { "name": "M-PT-Desk A3", "x": 250, "y": 50  },
             { "name": "M-PT-Desk B1", "x": 50,  "y": 150 },
             { "name": "M-PT-Desk B2", "x": 150, "y": 150 },
-            { "name": "M-PT-Desk B3", "x": 250, "y": 150 }
+            { "name": "M-PT-Desk B3", "x": 250, "y": 150 },
+            { "name": "M-PT-Desk PROVA", "x": 250, "y": 150 }
           ]
         },
         {
